New filters added, New UI For Internship,Courses, Home & Reg Implemented

--- a/templates/views/internships.hbs
+++ b/templates/views/internships.hbs
@@ -169,7 +169,7 @@
 
         function toggleLinkedin() {
 
-            const linkedinContainer = document.getElementsByClassName("linkedinContainer")[0];
+            const linkedinContainer = document.getElementsByClassName("result-box")[1];
             if (linkedinContainer.style.display !== 'none') {
                 linkedinContainer.style.display = 'none';
             } else {
