User ProfilePhoto implementation 50-60% done, New UI Implemented in few more pages

--- a/public/css/login2.css
+++ b/public/css/login2.css
@@ -14,3 +14,10 @@
     
    
 }
+
+.inner-container{
+    width:100%;
+    display: flex;
+    justify-content: baseline;
+    align-items: center;
+}
