--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -2,20 +2,21 @@
 <html lang="en">
 
 <head>
-    {{>headerMeta}}
+    {{>headerMeta2}}
+     <link rel="stylesheet" href="/css/jobs.css">
     <title> About : CareerPilot </title>
 </head>
 
 <body>
-    {{>header}}
+    {{>header2}}
 
-    <div class="container temp-adj">
+    <div class="jobs-hero">
 
-        <h1 class="section-titles"> About Us </h1>
+        <h1 class="cover-title" id="about-title"> About Us </h1>
 
 
     </div>
-    <h1 class="section-subtitles"> About CareerPilot </h1>
+    <h1 class="cover-para"> About CareerPilot </h1>
     <p class="index-para"> Welcome to CarrerPilot, a cutting-edge web portal powered by Node.js that revolutionizes how
         students and graduates navigate their educational and professional journeys. In an era of digital
         transformation, CarrerPilot is your go-to platform for seamless access to a plethora of educational resources,
