--- a/templates/views/customError.hbs
+++ b/templates/views/customError.hbs
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    {{>headerMeta}}
+    {{>headerMeta2}}
     <title>Error : CareerPilot </title>
 </head>
 <body>
 
-    {{>header}}
+    {{>header2}}
 
     <center>
-    <h1 class="section-titles index-para"> ERROR {{statusCode}}</h1>
+    <h1 class="cover-title" style="text-align:center"> ERROR {{statusCode}}</h1>
 
 
     <p class="index-para section-subtitles"> {{errorDesc}} </p><br>
