--- a/templates/views/dashboard.hbs
+++ b/templates/views/dashboard.hbs
@@ -4,8 +4,8 @@
 <head>
 
     {{!-- Header Section --}}
-
-    {{>headerMeta}}
+  {{>headerMeta}}
+    {{>headerMeta2}}
 
     {{!-- Stylesheet linking
     --}}
@@ -40,7 +40,7 @@
 
     {{!-- Header Navbar --}}
 
-    {{>header}}
+    {{>header2}}
 
     {{!-- Dashboard Container --}}
 
@@ -344,7 +344,7 @@
     </div>
     </div>
 
-    {{>footer}}
+    {{>footer2}}
 
 
 </body>
