--- a/templates/views/jobs3.hbs
+++ b/templates/views/jobs3.hbs
@@ -44,11 +44,10 @@
                 <div class="internshipContainer">
                     <span> Company Name : {{this.company}}</span><br>
                     <span> Job Title : {{this.title}} </span><br>
-                    <span> Start Date : </span><br>
-                    <span> Internship Duration : </span><br>
                     <span> Start Date : {{this.listDate}}</span><br>
-                    <span> Internship Location : {{this.location}}</span>
-                    <button class="btn"> View </button>
+                    <span> Job Location : {{this.location}}</span>
+                    <button class="btn"> View Details </button>
+                    <button class="btn"> Apply </button>
                 </div>
 
                 {{/each}}
@@ -63,11 +62,11 @@
                 <div class="internshipContainer">
                     <span> Company Name : {{this.company}}</span><br>
                     <span> Job Title : {{this.title}} </span><br>
-                    <span> Start Date : </span><br>
-                    <span> Job Duration : </span><br>
-                    <span> Start Date : </span><br>
-                    <span> Job Location : </span>
-                    <button class="btn"> View </button>
+                    {{!-- <span> Job Duration : </span><br>
+                    <span> Start Date : </span><br> --}}
+                    <span> Job Location : {{this.location}} </span>
+                    <button class="btn"> View Details </button>
+                    <button class="btn"> Apply </button>
                 </div>
 
                 {{/each}}
