--- a/templates/views/registration.hbs
+++ b/templates/views/registration.hbs
@@ -67,6 +67,9 @@
         <button class="btn" type="submit"> Create Account </button>
         <label class="check-box"> Remember Me? <input type="checkbox"> </label>
 
+        <label> Upload Profile Picture </label>
+        <input type="file" name="profileImage">
+
     </form>
 
     <script>
