--- a/templates/views/login2.hbs
+++ b/templates/views/login2.hbs
@@ -12,6 +12,7 @@
     {{>header2}}
 
     <div class="section-container">
+        <div class="inner-container">
         <div class="sec-left">
 
             <img src="/img/login.png" height="100%" width="100%" alt="Login">
@@ -35,6 +36,7 @@
             </form>
 
 </center>
+        </div>
         </div>
     </div>
 
