--- a/templates/views/reg2.hbs
+++ b/templates/views/reg2.hbs
@@ -136,6 +136,8 @@
 
               </select>
               <input type="text" placeholder="Enter Answer" required name="secQuestionAnswer">
+                <label> Upload Profile Picture </label>
+        <input type="file" name="profileImage">
               <button type="button" class="btn" onclick="prevPart(2)">Previous</button>
               <button class="btn" type="submit"> Sign Up </button>
 
