--- a/templates/views/userProfile.hbs
+++ b/templates/views/userProfile.hbs
@@ -10,7 +10,22 @@
 
     {{message}}
 
+   {{#if user.profilePicture}}
+    <!-- Content to display if user has a profile picture -->
+    <img src="{{userProfile.userAvatar}}">
+{{else}}
+    <!-- Content to display if user does not have a profile picture -->
+{{/if}}
+
+
     <h1 class="section-titles index-para"> {{capName}}</h1>
+    <form method="POST" action="/myprofile" role="form" enctype="multiport/form-data">
+    <input type="file" name="updateImage"> Upload Profile Picture 
+    <button class="btn" type="submit"> Save Changes </button>
+    </form>
+
+
+
 
     <div class="internshipContainer" style="width=90% !important">
 
