--- a/templates/views/settings.hbs
+++ b/templates/views/settings.hbs
@@ -14,7 +14,7 @@
   <div class="container">
    
 
-    <h1 class="title"> Settings </h1>
+    <h1 class="section-title"> Settings </h1>
   </div>
   <div class="sidebar">
 
