--- a/templates/views/404error.hbs
+++ b/templates/views/404error.hbs
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    {{>headerMeta}}
+    {{>headerMeta2}}
     <title> Error 404 : CarrerPilot</title>
 </head>
 <body>
-{{>header}}
+{{>header2}}
     
-<h1 class="section-titles index-para"> ERROR 404 : Page not found </h1>
+<h1 class="cover-title" style="text-align: center"> ERROR 404 : Page not found </h1>
 <center>
 
 <img src="/img/error404.jpg" alt="404 Dude Image not found as well!!" height="50%" width="50%">
