--- a/templates/views/settings2.hbs
+++ b/templates/views/settings2.hbs
@@ -10,20 +10,20 @@
 
     <div class="sidebar">
         <div class="sidebar-header">
-            Sidebar Header
+           Settings
         </div>
         <div class="sidebar-tabs">
-            <div class="tab"> My Profile </div>
-            <div class="tab"> Account Settings </div>
-            <div class="tab"> Security Settings </div>
-            <div class="tab"> Notification Settings </div>
-            <div class="tab"> Appearance &nsbp; Accessibility </div>
-            <div class="tab">  </div>
+        <div class="tab active"> <div> <img src="/img/vectors/user.png" height="16px" width="19px"></div><a href="/myprofile"> My Profile</a> </div>
+        <div class="tab"> <div> <img src="/img/vectors/settings.png" height="16px" width="19px"></div> Account Settings </div>
+        <div class="tab"> <div> <img src="/img/vectors/sec.png" height="16px" width="19px"></div> Security Settings </div>
+        <div class="tab"> <div> <img src="/img/vectors/notification.png" height="16px" width="19px"></div>Notification Settings </div>
+        <div class="tab"> <div> <img src="/img/vectors/ap.png" height="16px" width="19px"></div> Accessibility </div>
+        <div class="tab">  </div>
         </div>
     </div>
     <div class="content">
      
     </div>
-    <script src="script.js"></script>
+    <script src="/public/js/sidebar.js"></script>
 </body>
 </html>
