--- a/public/css/index2.css
+++ b/public/css/index2.css
@@ -152,6 +152,7 @@ h6 {
     justify-content: space-around;
     font-weight: 100;
     padding: 0.5rem;
+    box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.141);
     /* margin: 2px; */
 
 }
