--- a/templates/views/partials/footer2.hbs
+++ b/templates/views/partials/footer2.hbs
@@ -34,8 +34,8 @@
             <li><a href="/about">About</a></li>
             <li><a href="">Services</a></li>
             <li><a href="">Career Advice</a></li>
+            <li><a href="/setting">Settings</a></li>
             <li><a href="/loginPage">Log in</a></li>
-            <li><a href="/logout">Log out</a></li>
         </ul>
     </div>
 
