UserProfile refined. Profile Pic Functionality Added. Reg Error Fixed, Acc settings sidebar added, Static UI changed

--- a/public/css/index2.css
+++ b/public/css/index2.css
@@ -638,6 +638,12 @@ p {
     width: 100%;
 }
 
+/* Loading bar */
+
+#loading-bar{
+    display: none;
+}
+
 /* Media Queries */
 
 /* Mobile Screen */
