--- a/templates/views/help/sitemap.hbs
+++ b/templates/views/help/sitemap.hbs
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    {{>headerMeta}}
+    {{>headerMeta2}}
     <title>Sitemap : CareerPilot</title>
 </head>
 <body>
 
-    {{>header}}
+    {{>header2}}
 
     <h1 style="text-align: center"> Sitemap </h1>
 
