--- a/templates/views/partials/headerMeta2.hbs
+++ b/templates/views/partials/headerMeta2.hbs
@@ -28,6 +28,13 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
 
 {{!-- Updated one  --}}
+
+{{!-- Loading bar --}}
+
+<div id="loading-bar">
+    <img src="/public/img/loading.gif" alt="Loading...">
+</div>
+
 <script>
 
 
