UserProfile refined. Profile Pic Functionality Added. Reg Error Fixed, Acc settings sidebar added, Static UI changed

--- a/templates/views/forgotPassword.hbs
+++ b/templates/views/forgotPassword.hbs
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+   {{>headerMeta2}}
    {{>headerMeta}}
     <title>Forgot Password : CarrerPilot </title >
 </head>
 <body>
-    {{>header}}
+    {{>header2}}
 
     <div class="section1">
 
