--- a/templates/views/internships2.hbs
+++ b/templates/views/internships2.hbs
@@ -43,32 +43,32 @@
             <div class="cat-items">
                 <img src="/img/jobs/engg.png" alt="Image by Uniconlabs/Flaticons" height="80px" width="80px">
                 <h3>Engineering</h3>
-                <p>test</p>
+                {{!-- <p>test</p> --}}
             </div>
             <div class="cat-items">
                 <img src="/img/jobs/digital-m.png" alt="" height="80px" width="80px">
                 <h3>Digital Marketing</h3>
-                <p>test</p>
+                {{!-- <p>test</p> --}}
             </div>
             <div class="cat-items">
                 <img src="/img/jobs/business.png" alt="" height="80px" width="80px">
                 <h3>Business</h3>
-                <p>test</p>
+                {{!-- <p>test</p> --}}
             </div>
             <div class="cat-items">
                 <img src="/img/jobs/software-d.png" alt="" height="80px" width="80px">
                 <h3>Software Developer</h3>
-                <p>test</p>
+                {{!-- <p>test</p> --}}
             </div>
             <div class="cat-items">
                 <img src="/img/jobs/ds.png" alt="" height="80px" width="80px">
                 <h3>Data Science</h3>
-                <p>test</p>
+                {{!-- <p>test</p> --}}
             </div>
             <div class="cat-items">
                 <img src="/img/jobs/law.png" alt="" height="80px" width="80px">
                 <h3>Law</h3>
-                <p>test</p>
+                {{!-- <p>test</p> --}}
             </div>
 
         </div>
@@ -108,7 +108,6 @@
 
             <div class="results" id="internshipListing">
 
-
                 {{#each internshalaData}}
 
                 <div class="result-box internshalaContainer">
@@ -123,7 +122,6 @@
                 {{/each}}
 
                 {{#each linkedinData}}
-
 
                 <div class="result-box linkedinContainer">
                     <span> Company Name : {{this.company}}</span><br>
