--- a/templates/views/partials/footer2.hbs
+++ b/templates/views/partials/footer2.hbs
@@ -9,10 +9,10 @@
     <div class="ft-1">
         <h4> Company </h4>
         <ul>
-            <li><a href="">Certifications</a></li>
+            <li><a href="/courses">Certifications</a></li>
             <li><a href="/internships">Internships</a></li>
             <li><a href="/jobs">Jobs</a></li>
-            <li><a href="">Scholarships</a></li>
+            <li><a href="/scholarships">Scholarships</a></li>
             <li><a href="/dashboard">Dashboard</a></li>
         </ul>
     </div>
@@ -21,10 +21,10 @@
         <h4> Help </h4>
         <ul>
             <li><a href="/sitemap">Sitemap</a></li>
-            <li><a href="">Feedback</a></li>
-            <li><a href="">Contact Us</a></li>
-            <li><a href="">Report a Problem</a></li>
-            <li><a href="">F.A.Q</a></li>
+            <li><a href="/feedbackPage">Feedback</a></li>
+            <li><a href="/contactus">Contact Us</a></li>
+            <li><a href="/reportproblem">Report a Problem</a></li>
+            <li><a href="/faq">F.A.Q</a></li>
         </ul>
     </div>
 
@@ -33,7 +33,7 @@
         <ul>
             <li><a href="/about">About</a></li>
             <li><a href="">Services</a></li>
-            <li><a href="">Career Advice</a></li>
+            <li><a href="/carreradvice">Career Advice</a></li>
             <li><a href="/setting">Settings</a></li>
             <li><a href="/loginPage">Log in</a></li>
         </ul>
