UserProfile refined. Profile Pic Functionality Added. Reg Error Fixed, Acc settings sidebar added, Static UI changed

--- a/public/css/userprofile.css
+++ b/public/css/userprofile.css
@@ -33,6 +33,16 @@
     display: inline-block;
 }
 
+.profilePicture h1{
+    font-size: 1.8rem;
+    font-weight: 500;
+    margin-top: -20px;
+}
+
+.profilePicture img{
+    border: 3px solid white;
+}
+
 #profile-name{
     display: inline;
     margin-left: 50px;
