--- a/templates/views/partials/footer2.hbs
+++ b/templates/views/partials/footer2.hbs
@@ -42,7 +42,7 @@
     <div class="ft-1">
         <h4> Terms </h4>
         <ul>
-            <li><a href=""> Privacy Policy </a></li>
+            <li><a href="/privacypolicy">Privacy Policy </a></li>
             <li><a href="">Terms of use </a></li>
             <li><a href="">Career Advice</a></li>
             <li><a href="">Cookies</a></li>
