--- a/templates/views/userProfile.hbs
+++ b/templates/views/userProfile.hbs
@@ -22,10 +22,13 @@
     </div>
 
     <div class="profilePicture">
+        <span>
 
         <img src="data:image/jpg;base64,{{profileImageData}}" height="200px" width="250px" alt="Profile Image">
+        </span>
+        
+        <h1 id="profile-name"> {{capName}}</h1>
 
-    <h1 id="profile-name"> {{capName}}</h1>
     </div>
 
     {{!-- {{else}} --}}
