UserProfile refined. Profile Pic Functionality Added. Reg Error Fixed, Acc settings sidebar added, Static UI changed

--- a/templates/views/userProfile.hbs
+++ b/templates/views/userProfile.hbs
@@ -47,6 +47,10 @@
 
     </div>
 
+    <div class="profile-info-container">
+        
+    </div>
+
     {{!-- {{else}} --}}
     <!-- Content to display if user does not have a profile picture -->
     {{!-- {{/if}} --}}
