UserProfile refined. Profile Pic Functionality Added. Reg Error Fixed, Acc settings sidebar added, Static UI changed

--- a/templates/views/userProfile.hbs
+++ b/templates/views/userProfile.hbs
@@ -48,7 +48,29 @@
     </div>
 
     <div class="profile-info-container">
-        
+        <div class="profile-info">
+        <h1 id="profile-name"> {{capName}}</h1>
+        <p id="edu"> {{userProfile.userCity}}</p>
+
+        </div>
+
+        <div class="profile-info">
+        <h1 id="profile-name"> {{capName}}</h1>
+        <p id="edu"> {{userProfile.userCity}}</p>
+
+        </div>
+
+        <div class="profile-info">
+        <h1 id="profile-name"> {{capName}}</h1>
+        <p id="edu"> {{userProfile.userCity}}</p>
+
+        </div>
+
+        <div class="profile-info">
+        <h1 id="profile-name"> {{capName}}</h1>
+        <p id="edu"> {{userProfile.userCity}}</p>
+
+        </div>
     </div>
 
     {{!-- {{else}} --}}
