--- a/public/css/userprofile.css
+++ b/public/css/userprofile.css
@@ -84,3 +84,12 @@
     margin: 0 10px; /* Optional: You can adjust the margin to position the line */
     margin-left: 60px;
 }
+
+.profile-info-container{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center;
+    margin:10px;
+
+}
