UserProfile refined. Profile Pic Functionality Added. Reg Error Fixed, Acc settings sidebar added, Static UI changed

--- a/templates/views/userProfile.hbs
+++ b/templates/views/userProfile.hbs
@@ -49,25 +49,25 @@
 
     <div class="profile-info-container">
         <div class="profile-info">
-        <h1 id="profile-name"> {{capName}}</h1>
+        <h1 id="profile-name"> Personal Information </h1>
         <p id="edu"> {{userProfile.userCity}}</p>
 
         </div>
 
         <div class="profile-info">
-        <h1 id="profile-name"> {{capName}}</h1>
+        <h1 id="profile-name"> Educational Information </h1>
         <p id="edu"> {{userProfile.userCity}}</p>
 
         </div>
 
         <div class="profile-info">
-        <h1 id="profile-name"> {{capName}}</h1>
+        <h1 id="profile-name"> Skills / Interests </h1>
         <p id="edu"> {{userProfile.userCity}}</p>
 
         </div>
 
         <div class="profile-info">
-        <h1 id="profile-name"> {{capName}}</h1>
+        <h1 id="profile-name"> Certifications </h1>
         <p id="edu"> {{userProfile.userCity}}</p>
 
         </div>
