--- a/public/css/userprofile.css
+++ b/public/css/userprofile.css
@@ -29,7 +29,7 @@
 .profilePicture{
     position: relative;
     top: -90px;
-    /* margin: 30px; */
+    margin-left: 30px; 
     display: flex;
     width: fit-content;
     /* width:100%; */
