Filters Refined. New  Job Source added, Apply Redirect Btn Functional, About Data Scrapped, Modal Box Added

--- a/templates/views/jobs.hbs
+++ b/templates/views/jobs.hbs
@@ -86,6 +86,7 @@
                     <h4 class="section-title"> Top Services </h4>
                     Show/Hide JobRapido Posting <input type="checkbox"> <br>
                     Show/Hide LinkedIn Posting<input type="checkbox"> <br>
+                    Show/Hide WeWorkRemotely Posting<input type="checkbox"> <br>
 
 
                 </div>
