--- a/templates/views/internships2.hbs
+++ b/templates/views/internships2.hbs
@@ -114,7 +114,8 @@
                     <span> Company Name : {{this.title}}</span><br>
                     <span> Job Title : {{this.jobTitle}} </span><br>
                     <span class="salary"> Stripend : {{this.stripend}} </span><br>
-                    <span> Internship Location : {{this.location}}</span>
+                    <span> Internship Location : {{this.location}}</span><br>
+                    <span> Source : Internshala </span><br>
                     {{!-- <span> <img src="{{this.dataURI}}"></span> --}}
                     <button class="btn open-modal-btn"> View Details </button>
                     <a class="btn" href="{{this.redirectLink}}" target="_blank"> Apply </a>
@@ -127,7 +128,8 @@
                     <span> Company Name : {{this.company}}</span><br>
                     <span> Job Title : {{this.title}} </span><br>
                     <span> Start Date : {{this.listDate}}</span><br>
-                    <span> Internship Location : {{this.location}}</span>
+                    <span> Internship Location : {{this.location}}</span><br>
+                    <span> Source : Linkedin</span><br>
                     <button class="btn"> View </button>
                 </div>
 
@@ -182,6 +184,8 @@
             filterButton.addEventListener('click', function () {
                 const minSalary = parseFloat(minSalaryInput.value);
                 const maxSalary = parseFloat(maxSalaryInput.value);
+
+                console.log(`Logged Value of Min Salary is ${minSalary}`)
 
                 // Get all result boxes
                 const resultBoxes = document.querySelectorAll('.result-box');
