Filters Refined. New  Job Source added, Apply Redirect Btn Functional, About Data Scrapped, Modal Box Added

--- a/templates/views/internships2.hbs
+++ b/templates/views/internships2.hbs
@@ -226,6 +226,7 @@
             </div>
         </div>
         <script src="js/modals.js"></script>
+        <script src="js/filters.js"></script>
 </body>
 
 </html>
