Filters Refined. New  Job Source added, Apply Redirect Btn Functional, About Data Scrapped, Modal Box Added

--- a/templates/views/internships2.hbs
+++ b/templates/views/internships2.hbs
@@ -182,7 +182,10 @@
             const filterButton = document.getElementById('salaryFilter');
 
             filterButton.addEventListener('click', function () {
-                const minSalary = parseFloat(minSalaryInput.value);
+                let minSalary = minSalary.slice(2,minSalary.length);
+                minSalary = minSalary.replace(/,/g, '');
+                minSalary = parseFloat(minSalaryInput.value);
+                console.log(minSalary);
                 const maxSalary = parseFloat(maxSalaryInput.value);
 
                 console.log(`Logged Value of Min Salary is ${minSalary}`)
