--- a/templates/views/partials/header2.hbs
+++ b/templates/views/partials/header2.hbs
@@ -23,8 +23,6 @@
 
     {{#if verifyUser}}
 
-    <script> console.log("test 45");</script>
-
     <li id="dropdown">
         {{!-- <a href="#" class="profile-icon">
             <img src="/img/vectors/user.png" alt="Profile" height="30px" width="30px">
@@ -76,6 +74,9 @@
         }
     });
 
+    // Appending Logout / Reg, Sign up on Responsive screen
+
+ 
 
 
 </script>
